hphp/test/zend/good/tests-classes/abstract_not_declared.php.exp
HipHop Fatal error: Class fail contains abstract method show and must therefore be declared abstract in hphp/test/zend/good/tests-classes/abstract_not_declared.php on line 4
