hphp/test/zend/good/tests-classes/abstract_not_declared.php
<?php

class fail {
	abstract function show();
}

echo "Done\n"; // shouldn't be displayed
?>